tests/unit-fail/j038c.ref
Error: UB-CB3
Description: Function call has more arguments than parameters in function definition.
Type: Undefined behavior.
See also: C11 sec. 6.5.2.2:6, J.2:1 item 38
  at foo(j038c.c:8)
  at main(j038c.c:8)
  at <file-scope>(<unknown>)
Execution failed (configuration dumped)
