tests/unit-fail/j038c.c
int foo(a)
      int a;
{
      return 0;
}

int main(void) {
      foo(5, 6);
      return 0;
}
